# recopilatori

./: .gitignore  Cargo.toml  Justfile  README.md  rust-analyzer.toml  schema.sql  shell.nix
src/: databaseing.rs  existance.rs  geoloc.rs  lib.rs  main.rs  populating.rs
